Changes for 1.8.3

 - [ZBXNEXT-425] added new macros for acknowledged events count (Vedmak)
 - [ZBX-2642] fixed items multiplier field (Vedmak)
 - [ZBX-2639] now when do full clone template, linkage list is cleared (Vedmak)
 - [ZBX-2598] fixed labels with linebreak in maps (Aly)
 - [ZBXNEXT-426] added dashboard option to show unack problems (Vedmak)
 - [ZBX-2555] fixed simple checks for FTP, POP, and NNTP protocols so that they close sessions properly (asaveljevs)
 - [ZBX-2553] fixed simple checks ignoring server replies (asaveljevs)
 - [ZBX-2612] fixed system.stat showing cpu idle and I/O wait time over 100% on AIX (asaveljevs)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (asaveljevs,Richlv)
 - [ZBX-2616] bundled DejaVu font upgraded from 2.30 to 2.31 (Richlv)
 - [ZBX-2562] improved sessions store (Aly)
 - [ZBXNEXT-424] enhanced status of trigger filter (Vedmak)
 - [ZBX-2599] fixed processing of hexadecimal or octal data by proxy (Sasha)
 - [ZBX-2597] fixed processing of telnet results with long prompts (Sasha)
 - [ZBX-2595] fixed logformat field showing (Maxim Andruhovich / AM)
 - [ZBX-2593] fixed possibility to copy item between templates that are linked to same host (Vedmak)
 - [ZBX-2585] removed spaces from charts title & fixed date format for chart4.php (Maxim Andruhovich / AM)
 - [ZBX-2592] added support of comma character (,) for scripts in action remote commands (Sasha)
 - [ZBX-2575] removed outdated and undocumented environment variables from alert scripts (asaveljevs)
 - [ZBX-2574] improved fixed graph Y axis measurement (Aly)
 - [ZBX-2576] small text changes in administration/audit (Vedmak)
 - [ZBX-1857] fixed item form correct processing, removed refreshing when item type is changed (Maxim Andruhovich / AM)
 - [ZBX-2528] fixed default language loading before using phrases, warning messages removed which were displayed after login (Maxim Andruhovich / AM)