@@ -68,8 +68,8 @@ include_once 'include/page_header.php';
 	insert_js_function('update_bitem');
 
 	if(isset($_REQUEST['save']) && !isset($_REQUEST['gid'])){
-		insert_js("add_bitem('".
-			zbx_jsvalue($_REQUEST['dstfrm'])."',".
+		insert_js("add_bitem(".
+			zbx_jsvalue($_REQUEST['dstfrm']).",".
 			zbx_jsvalue($_REQUEST['caption']).",'".
 			$_REQUEST['itemid']."','".
 			$_REQUEST['color']."',".
@@ -78,9 +78,9 @@ include_once 'include/page_header.php';
 	}
 
 	if(isset($_REQUEST['save']) && isset($_REQUEST['gid'])){
-		insert_js("update_bitem('".
-			zbx_jsvalue($_REQUEST['dstfrm'])."','".
-			zbx_jsvalue($_REQUEST['list_name'])."','".
+		insert_js("update_bitem(".
+			zbx_jsvalue($_REQUEST['dstfrm']).",".
+			zbx_jsvalue($_REQUEST['list_name']).",'".
 			$_REQUEST['gid']."',".
 			zbx_jsvalue($_REQUEST['caption']).",'".
 			$_REQUEST['itemid']."','".
