@@ -1,5 +1,6 @@
 Changes for 1.8.3
 
+ - [ZBX-2657] fixed bugs with non closing item select popups in bar reports (Vedmak)
  - [ZBXNEXT-425] added new macros for acknowledged events count (Vedmak)
  - [ZBX-2642] fixed items multiplier field (Vedmak)
  - [ZBX-2639] now when do full clone template, linkage list is cleared (Vedmak)
